<resources>
    <string name="app_name">Picts Manager</string>
    <string name="wall">wall</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="resize">redimensionner</string>
    <string name="social">social</string>
    <string name="settings">settings</string>
    <string name="hello_settings_fragment">settings_string</string>
    <string name="hello_gallery_fragment">gallery_string</string>
    <string name="hello_camera_fragment">camera_string</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="social_title">Friend List</string>
    <string name="fab_search_friend_description">Button for search and add friend</string>
    <string name="search_friend_hint">Enter at least 3 characters</string>
    <string name="no_result">No Result</string>
    <string name="search_progress">Search in progress</string>
    <string name="btn_friend_request">access friend request validation</string>
    <string name="accept_all">Accept All</string>
    <string name="deny_all">Deny All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="albums_header">Mes Albums</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="debug">debug</string>
    <string name="update">update</string>
    <string name="logout">logout</string>
    <string name="width">largeur</string>
    <string name="height">hauteur</string>
    <string name="quality">qualité</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="path_img">/sdcard/Pictures/</string>
</resources>