<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SocialFragment">

    <ListView
        android:id="@+id/friend_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <SearchView
        android:id="@+id/friend_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:queryHint="Search for friends"
        android:background="@drawable/border"
        android:visibility="invisible"/>

    <ListView
        android:id="@+id/result_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="20sp"
        android:layout_below="@+id/friend_searchView"
        android:textSize="20sp"
        android:background="@drawable/border"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_search_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/ic_search_friend"
        android:layout_alignParentBottom="true"
        android:layout_margin="32sp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/fab_search_friend_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab_search_friend"
        app:fabSize="normal"
        android:src="@drawable/ic_friend_request"
        android:layout_marginEnd="32sp"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:backgroundTint="#A8C30000"
        android:contentDescription="@string/btn_friend_request" />

    <RelativeLayout
        android:id="@+id/request_inwaiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ListView
            android:id="@+id/request_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="100sp"
            android:textSize="20sp"
            android:background="@drawable/border"/>

        <Button
            android:id="@+id/btn_accept_all"
            android:layout_width="125sp"
            android:layout_height="50sp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5sp"
            android:layout_marginBottom="20sp"
            android:text="@string/accept_all"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btn_deny_all"
            android:layout_width="125sp"
            android:layout_height="50sp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20sp"
            android:text="@string/deny_all"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="125sp"
            android:layout_height="50sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="20sp"
            android:text="@string/cancel"
            android:background="@color/white"/>
    </RelativeLayout>

</RelativeLayout>